[package]
name = "linkit"
version = "0.0.1"
description = "A Tauri App"
authors = ["sysatom"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["macos-private-api", "shell-open", "window-all"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json"] }
delay_timer = "0.11.4"
warp = "0.3.5"
moka = "0.11.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
